# ether-email-auth

./: .dockerignore  .env.example  .gitignore  .gitmodules  CODING_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  Full.Dockerfile  IMAP.Dockerfile  README.md  Relayer.Dockerfile  SMTP.Dockerfile  cloudbuild-relayer.yaml  docker-compose.yaml  docker-compose.yml  package.json  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: build-fmt.yml  build-img.yml  build-test-fmt.yml  build.yml  clippy.yml  rustfmt.yml  unit-tests.yml
docs/: deployed-contracts.md  emergency.md  getting-started.md  upgrade.md
docs/src/: zk_email_wallet.md
e2e/: Cargo.toml
e2e/src/: config.rs  main.rs
example/contracts/: .env.example  package.json  remappings.txt
example/contracts/script/: DeployEmitEmailCommand.s.sol
example/scripts/: package.json  tsconfig.json
infrastructure/: README.md
infrastructure/alerts/: Uptime_Check_for_AR_Relayer_(Base_Sepolia).json  Uptime_Check_for_AR_Relayer_(ZKsync_Sepolia).json  Uptime_Check_for_Email_Wallet_Relayer.json  apply_alert.sh  logging_user_error-from-prover_[SUM].json  logging_user_error-handling-email-event_[SUM].json  logging_user_error-handling-email_[SUM].json
infrastructure/metrics/: apply_metric.sh  contract-call-reverted-with-data.json  error-from-prover.json  error-handling-email-event.json  error-handling-email.json
kubernetes/: cloudbuild-base.yml  cloudbuild-relayer.yml  cronjob.yml  db.yml  ingress.yml  managed-cert.yml  relayer.staging.yml  relayer.yml
libs/: rapidsnark.Dockerfile
(+5 files in other folders)
