[package]
name = "email-tx-builder-e2e-receiver"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bigdecimal = "0.3.1"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
relayer-utils = { git = "https://github.com/zkemail/relayer-utils.git", branch = "main" }
slog = { version = "2.7.0", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.8", features = ["json"] }
handlebars = "6.1.0"
lazy_static = "1.5.0"
relayer-imap = { version = "0.1.0", git = "https://github.com/zkemail/relayer-imap.git", branch = "feat/config_file" }
relayer-smtp = { version = "0.1.0", git = "https://github.com/zkemail/relayer-smtp.git", branch = "feat/serde" }
regex = "1.10.6"
